force-app/main/default/objects/TBank_Case_History__c/TBank_Case_History__c.object-meta.xml
<CustomObject>
    <description>For store TBank case history data.</description>
    <label>TBank Case History</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>TBank Case History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TBank Case History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>