force-app/main/default/objects/TBank_Case_History__c/fields/CA_No__c.field-meta.xml
<CustomField>
    <fullName>CA_No__c</fullName>
    <description>เลขที่สัญญา/เลขที่บัญชี</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CA No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>