force-app/main/default/objects/TBank_Case_History__c/fields/CALL_DATE__c.field-meta.xml
<CustomField>
    <fullName>CALL_DATE__c</fullName>
    <description>วันที่ติดต่อ</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CALL DATE</label>
    <type>DateTime</type>
</CustomField>