force-app/main/default/objects/TBank_Case_History__c/fields/CALL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CALL_TYPE__c</fullName>
    <description>วิธีการ</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CALL TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>