force-app/main/default/objects/TBank_Case_History__c/fields/CREATE_USER__c.field-meta.xml
<CustomField>
    <fullName>CREATE_USER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CREATE USER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>