force-app/main/default/objects/TBank_Case_History__c/fields/CUST_NAME__c.field-meta.xml
<CustomField>
    <fullName>CUST_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CUST NAME</label>
    <length>150</length>
    <type>Text</type>
</CustomField>