force-app/main/default/objects/TBank_Case_History__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TBank Case History</relationshipLabel>
    <relationshipName>TBank_Case_History</relationshipName>
    <type>Lookup</type>
</CustomField>