force-app/main/default/objects/TBank_Case_History__c/fields/MEMO_DESC__c.field-meta.xml
<CustomField>
    <fullName>MEMO_DESC__c</fullName>
    <description>สถานะ</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MEMO DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>