force-app/main/default/objects/TBank_Case_History__c/fields/MEMO_ID__c.field-meta.xml
<CustomField>
    <fullName>MEMO_ID__c</fullName>
    <description>เลขที่ Case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MEMO ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>