force-app/main/default/objects/TBank_Case_History__c/fields/MEMO_STATUS__c.field-meta.xml
<CustomField>
    <fullName>MEMO_STATUS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MEMO STATUS</label>
    <length>2</length>
    <type>Text</type>
</CustomField>