force-app/main/default/objects/TBank_Case_History__c/fields/MEMO_TYPE__c.field-meta.xml
<CustomField>
    <fullName>MEMO_TYPE__c</fullName>
    <description>รหัสประเภทการติดต่อ</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MEMO TYPE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>