force-app/main/default/objects/TBank_Case_History__c/fields/REF_DESC__c.field-meta.xml
<CustomField>
    <fullName>REF_DESC__c</fullName>
    <description>ฝ่ายที่รับเรื่อง</description>
    <encryptionScheme>None</encryptionScheme>
    <label>REF DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>