force-app/main/default/objects/TBank_Case_History__c/fields/UPDATE_USER__c.field-meta.xml
<CustomField>
    <fullName>UPDATE_USER__c</fullName>
    <description>รหัสผู้ Update</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UPDATE USER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>